--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/scss/bootstrap.scss"
             ],
             "scripts": [],
             "es5BrowserSupport": true
