--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,8 +1,8 @@
-FROM node
+FROM node:12.2.0
 WORKDIR /app
-COPY ./package.json ./
+COPY package.json .
 RUN npm install
 RUN npm install @angular/cli -g
 COPY . .
-RUN ng serve
-EXPOSE 4200
+EXPOSE 4200 49153
+CMD ng serve --host 0.0.0.0 --poll 500
